@@ -77,6 +77,7 @@ class DownloadJob:
         self._last_time = 0
         self._last_bytes = 0
         self._last_rate = 0
+        self._size_total = None
 
     def __getstate__(self):
         """Get the state of the DownloadJob instance
@@ -114,14 +115,14 @@ class DownloadJob:
 
     @property
     def file_size(self):
-        size = None
-        if not self.condensed:
-            # Try to get the file size from the resource dictionary.
-            # Note that the file size is set only after upload. So, if you
-            # are downloading immediately after upload, the "size"
-            # attribute might not be set yet.
-            size = self.get_resource_dict()["size"]
-        if size is None:
+        if self._size_total is None:
+            if not self.condensed:
+                # Try to get the file size from the resource dictionary.
+                # Note that the file size is set only after upload. So, if you
+                # are downloading immediately after upload, the "size"
+                # attribute might not be set yet.
+                self._size_total = self.get_resource_dict()["size"]
+        if self._size_total is None:
             # Fetch the file size from S3.
             # This is the only option for condensed downloads (because they
             # are not a resource) and the fall-back for actual resources.
@@ -132,8 +133,8 @@ class DownloadJob:
                                verify=self.api.verify,
                                timeout=29.9,
                                )
-            size = int(req.headers["Content-length"])
-        return size
+            self._size_total = int(req.headers["Content-length"])
+        return self._size_total
 
     @property
     def id(self):
